recursion.hanoi.SplitHanoi2.scala.error
Erreur de compilation :
SplitHanoi2:14: error: not found: value dist1
    splitHanoi(height-1, src, dst2, dist1, other)
                                    ^